Fixes display issue
Top portion of site was being cut off

Improved spelling errors in README.md & updates TODO

--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@ body {
 
 .btn-container {
    margin: auto;
-   margin-top: 4em;
+   margin-top: -8em;
    align-content: center;
    width: 21%;
 }
